# data-normalizer

./: README.md  cli.py  pyproject.toml
normalizer/: cleaner.py  cli.py  exporter.py  loader.py  profiler.py  schema.py
